Add Travis-CI / Sonatype scripts

--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -9,3 +9,5 @@ android {
         targetSdkVersion project.targetSdkVersion
     }
 }
+
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
