--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 GROUP=saschpe
 VERSION_NAME=1.0.0-SNAPSHOT
 
-POM_DESCRIPTION=A version info widget. Material style.
+POM_DESCRIPTION=A version info widget for Android. Material style.
 
 POM_URL=https://github.com/saschpe/android-versioninfo
 POM_SCM_URL=https://github.com/saschpe/android-versioninfo
