Fetch Android updates with Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ android:
   components:
     - build-tools-23.0.1
     - android-23
+    - extra-android-m2repository
   licenses:
-    - android-sdk-license-5be876d5
+    - android-sdk-license-.+
 
 jdk:
   - oraclejdk7
