--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -8,6 +8,10 @@ android {
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
