--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ allprojects {
     }
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
 ext {
     // Sdk and tools
     minSdkVersion = 11
