Update dependency versions
Add proguard config for release builds.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ android {
     defaultConfig {
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
-        applicationId "com.example.versioninfo"
+        applicationId 'com.example.versioninfo'
         versionCode 1
-        versionName "1.0"
+        versionName project.version
     }
 
     lintOptions {
