--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ buildscript {
     repositories {
         jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-beta3'
+        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
     }
 }
 
@@ -18,12 +19,14 @@ task clean(type: Delete) {
 }
 
 ext {
+    version = '1.0'
+
     // Sdk and tools
     minSdkVersion = 11
     targetSdkVersion = 23
     compileSdkVersion = 23
-    buildToolsVersion = '23.0.3'
+    buildToolsVersion = '24.0.0'
 
     // App dependencies
-    supportLibraryVersion = '23.3.0'
+    supportLibraryVersion = '24.0.0'
 }
