--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
