--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion project.targetSdkVersion
         applicationId 'com.example.versioninfo'
         versionCode 1
-        versionName project.version
+        versionName '1.1'
     }
 
     lintOptions {
