--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionCode 1
-        versionName '1.1'
+        versionName '1.2'
     }
 
     lintOptions {
@@ -55,20 +55,27 @@ bintray {
         labels = ['aar', 'android']
         publish = true
         publicDownloadNumbers = true
+
+        githubRepo = 'saschpe/android-versioninfo'
+        githubReleaseNotesFile = 'README.md'
+
         version {
-            //name = rootProject.ext.version
+            name = android.defaultConfig.versionName
             desc = descr
         }
     }
 }
 
-install {
-    repositories.mavenInstaller {
+task createPom {
         pom {
             project {
                 packaging 'aar'
+
                 name project.name
+                description descr
                 url siteUrl
+                inceptionYear '2016'
+
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
@@ -80,10 +87,17 @@ install {
                     developerConnection gitUrl
                     url siteUrl
                 }
+                developers {
+                    developer {
+                        id 'saschpe'
+                        name 'Sascha Peilicke'
+                        email 'sascha@peilicke.de'
+                    }
+                }
             }
-        }
-    }
+        }.writeTo("$buildDir/poms/pom-default.xml").writeTo("pom.xml")
 }
+build.dependsOn createPom
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -99,6 +113,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
+
 artifacts {
     archives javadocJar
     archives sourcesJar
