--- a/versioninfo/src/main/AndroidManifest.xml
+++ b/versioninfo/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<manifest package="saschpe.versioninfo">
+<manifest package="saschpe.android.versioninfo">
 
     <application/>
 
