--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -14,6 +14,11 @@
  * limitations under the License.
  */
 
+plugins {
+    id 'com.github.dcendents.android-maven' version '1.5'
+    id 'com.jfrog.bintray' version '1.7.3'
+}
+
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.file) {
     Properties localProperties = new Properties()
@@ -59,9 +64,6 @@ ext {
     gitUrl = 'https://github.com/saschpe/android-versioninfo.git'
     descr = 'A version info widget for Android. Material style.'
 }
-
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
 
 bintray {
     user = project.properties["bintray.user"]
