--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -52,6 +52,10 @@ android {
     }
 }
 
+dependencies {
+    api 'com.android.support:support-fragment:27.1.1'
+}
+
 group = 'saschpe.android'
 version = android.defaultConfig.versionName
 
