--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId 'com.example.versioninfo'
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 140200
         versionName '2.0.0'
         archivesBaseName = "${applicationId}-${versionName}"
@@ -44,5 +44,5 @@ android {
 
 dependencies {
     implementation project(':versioninfo')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
