--- a/versioninfo/build.gradle
+++ b/versioninfo/build.gradle
@@ -31,12 +31,12 @@ if (localPropertiesFile.file) {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.2'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionName '2.0.0'
     }
 
@@ -53,7 +53,7 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:support-fragment:27.1.1'
+    api 'androidx.fragment:fragment:1.0.0'
 }
 
 group = 'saschpe.android'
