--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId 'com.example.versioninfo'
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 1401131
-        versionName '1.3.1'
+        versionCode 140200
+        versionName '2.0.0'
         archivesBaseName = "${applicationId}-${versionName}"
     }
 
