--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
 }
 
 plugins {
+    id 'com.github.ben-manes.versions' version '0.20.0'
     id 'com.diffplug.gradle.spotless' version '3.8.0'
 }
 
