--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,17 @@
-#
-# Copyright 2017 Sascha Peilicke
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
+# Project-wide Gradle settings.
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
 
-android.enableJetifier=true
+# AndroidX
 android.useAndroidX=true
+android.enableJetifier=true
+
+# Robolectric:
+android.enableUnitTestBinaryResources=true
+
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+# https://blog.jetbrains.com/kotlin/2019/01/kotlin-1-3-20-released
+kotlin.parallel.tasks.in.project=true
