Update Android Gradle Plugin to 7.4.2
Including Gradle 7.5

--- a/versioninfo/src/main/AndroidManifest.xml
+++ b/versioninfo/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
   ~ limitations under the License.
   -->
 
-<manifest package="saschpe.android.versioninfo">
+<manifest>
 
-    <application/>
+    <application />
 
 </manifest>
