GitHub Actions: Update CI trigger conditions for push and pull requests
The workflow now triggers only for pushes to 'main' and ignores changes
to specific files like .gitignore, LICENSE, and README.md. Additionally,
it triggers on pull requests targeting the 'main' branch, enhancing
clarity and efficiency in pipeline execution.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,16 @@
 name: Main CI
-on: [ push ]
+
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - .gitignore
+      - LICENSE
+      - README.md
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
